# ShareYourCloning_backend

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  RSE_example.ipynb  assembly2.py  batch_cloning.html  codecov.yml  constr.py  crispr.ipynb  dna_functions.py  dummy.gb  dummy.py  dummy2.py  dummy_cartoon.txt  gateway.ipynb  gateway.py  improvements_data_model.md  license.txt  locus.json  main.py  ncbi_requests.py  networks.py  new_assemblies.ipynb  notes_cut.md  pombe_all.sh  pombe_clone.py  pombe_gather.py  pombe_get_primers.py  pombe_summary.py  primer_design.py  primers.fa  pydantic_models.py  pyproject.toml  queen_functions.py  questions.md  readme.md  (+19 more)
.github/ISSUE_TEMPLATE/: new-source.md
.github/workflows/: ci.yml  post_release.yml
batch_cloning/: ziqiang_et_al2024.html  ziqiang_et_al2024.json  ziqiang_et_al2024.py
dna_functions/: setup.py
dna_functions/dna_functions/: __init__.py
dna_functions/dna_functions.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: example_insertion_vs_circle.py  example_read_from_file.py  example_settings.py
examples/jupyter-notebooks/: RSE_example.ipynb  ase1.gb  crispr.ipynb  new_assemblies.ipynb  pydantic_fastAPI_behaviour.ipynb  pydna_behaviour.ipynb
examples/plasmids/: addgene-plasmid-39296-sequence-49545.gbk
examples/sequences/: addgene-plasmid-39296-sequence-49545.dna  addgene-plasmid-39296-sequence-49545.gbk  ase1.embl  circular_dummy.gb  dummy_EcoRI.fasta  dummy_multi_fasta.fasta  file.json  golden_gate.gb  pFA6a-hphMX6.gb
examples/sequencing-trace-spanning-origin/: BZO902-13409020-13409020.ab1  BZO903-13409037-13409037.ab1  circularised_locus.gb
examples/snapgene_history/: aa_.json  ase1.dna  build_history.py  damiens_script.py  extract_snapgene_history.py  final_plasmid.dna  final_plasmid_history.xml  first_attempt.py  history.json  history_sources_only.json  pcr_product.dna  readme.md  snapgene_history_minimal.xml  snapgene_hitory_damien.xml  strings_output.txt  trim_svg.py
pydantic_models/: setup.py
pydantic_models/pydantic_models/: __init__.py
pydantic_models/pydantic_models.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pydna_examples/: dummy2.py  dummy3.py  dummy_a.gb
src/opencloning/: api_config_utils.py  app_settings.py  dna_functions.py  dna_utils.py  main.py  ncbi_requests.py  pydantic_models.py
src/opencloning/batch_cloning/: __init__.py
src/opencloning/endpoints/: annotation.py  assembly.py  (+4 more)
src/shareyourcloning/: assembly2.py  batch_cloning.html  dna_functions.py  dna_utils.py  get_router.py  main.py  ncbi_requests.py  pombe_clone.py  pombe_summary.py  primer_design.py  pydantic_models.py  request_examples.py  utils.py
test_files/: P2RP3_linear.ape  crispr_test.json  dummy_b.gb  homologous_recombination.json
test_files/dummy_frontend/: index.html
test_files/gateway/: P30326 (2013-08-22 14_11_10).gb  bioprotocols-history-4.json  insert.gb  pDONR P2r-P3.dna  pDONR_P2r-P3.gb
test_files/gateway_manual_cloning/: entry-attP1_1-attP2_1.dna  expression-attP1_1-attP2_1.dna  pDONRtm221 P3-P2.dna  pDONRtm221.dna  pairing.tsv  pcDNAtm-DEST53.dna  pcr_product-attP2_1-attP1_3.dna
tests/: test_api_common.py  test_app_settings.py  test_assembly.py  test_dna_functions.py  test_dna_utils.py  test_endpoints.py  test_endpoints_annotation.py  test_endpoints_assembly.py  test_endpoints_batch_cloning.py  test_endpoints_external_import.py  test_endpoints_no_assembly.py  test_endpoints_no_input.py  test_endpoints_other.py  test_endpoints_primer_design.py  test_env_configuration.py  test_gateway.py  test_ncbi_requests.py  test_primer_design.py  test_pydantic_models.py  test_stub_route.py
tests/test_files/: P2RP3.ape  addgene-plasmid-39296-sequence-49545.dna  addgene-plasmid-39296-sequence-49545.gbk  ase1_body_error.gb  ase1_no_topology.gb  dummy_EcoRI.fasta  example.ape  pFA6a-hphMX6.gb  pKT128_euroscarf.gb  pSEVA427.gbk
(+47 files in other folders)
