[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = "Backend of ShareYourCloning, a web application to generate molecular cloning strategies in json format, and share them with others."
license = "MIT"
name = "shareyourcloning_backend"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
beautifulsoup4 = "^4.11.1"
fastapi = "*"
httpx = "^0.25.0"
python = "^3.10"
python-multipart = "*"
uvicorn = "*"
pydna = {git = "https://github.com/BjornFJohansson/pydna", rev = "bfddf0cb23dd5c326ad56b4907b52089fd6733d7"}
requests = "^2.31.0"
regex = "^2023.10.3"
pydantic = "^2.7.1"
shareyourcloning-linkml = {git = "https://github.com/genestorian/ShareYourCloning_LinkML"}

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
flake8-bugbear = "^24.2.6"
black = "^24.2.0"
pre-commit = "^3.6.2"
watchfiles = "^0.21.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.6.2"
pytest-cov = "^4.1.0"
pytest-rerunfailures = "^14.0"


[tool.poetry.group.ipython.dependencies]
ipython = "^8.20.0"
ipykernel = "^6.28.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
skip-string-normalization = true
line-length = 119
